cli/tests/snapshot/inputs/errors/json_error_location_with_unicode.ncl
# capture = 'stderr'
# command = ['eval']
(import "../../imports/map-with-unicode.json") | { "tiếng" : Number, "việt" : String }
